# minishell

./: .gitignore  CMakeLists.txt  Makefile  README.md  ft_cd.c  ft_check_exec.c  ft_cmd.c  ft_data_init.c  ft_dir.c  ft_echo.c  ft_env.c  ft_env_utils.c  ft_env_value.c  ft_exit.c  ft_export.c  ft_export_utils.c  ft_file.c  ft_fork_pipe.c  ft_fork_pipe_utils.c  ft_free_xxx.c  ft_gnl.c  ft_identlstback.c  ft_launch.c  ft_pwd.c  ft_red_array.c  ft_red_new.c  ft_redirect.c  ft_redirect_utils.c  ft_redlstback.c  ft_split_quote.c  ft_unset.c  minishell.c  minishell.h
libft/: Makefile  ft_arrstrjoin.c  ft_arrstrlen.c  ft_arrstrlen_null.c  ft_atoi.c  ft_atoi_shell.c  ft_bzero.c  ft_calloc.c  ft_error.c  ft_free_arrstr.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_strjoin.c  ft_strjoin_free.c  ft_strlcat.c  (+13 more)
parse/: ft_check_cmd.c  ft_get_len_str_cmd.c  ft_get_red_val_init.c  ft_is_red.c  ft_is_valid_cmd.c  ft_parse.c  ft_skip_back_n.c  ft_skip_space.c  ft_strdup_env_val.c  ft_valid_arr_str.c  ft_valid_str.c  parse.h
