cmake_minimum_required(VERSION 3.17)
project(minishell C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/test")

add_executable(minishell
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_itoa.c
        libft/ft_lstadd_back.c
        libft/ft_lstadd_front.c
        libft/ft_lstclear.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        libft/ft_split.c
        libft/ft_strchr.c
        libft/ft_strdup.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        libft/ft_strtrim_free.c
        libft/ft_strjoin_free.c
        libft/ft_strlen_null.c
        libft/ft_arrstrjoin.c
        libft/ft_arrstrlen.c
        libft/ft_arrstrlen_null.c
        libft/ft_atoi_shell.c
        ft_cd.c
        ft_data_init.c
        ft_env.c
        ft_launch.c
        ft_pwd.c
        minishell.c
        minishell.h
        ft_identlstback.c
        ft_redlstback.c
        ft_gnl.c
        ft_export.c
        ft_redirect.c
        ft_echo.c
        ft_red_array.c
        ft_dir.c
        ft_cmd.c
        ft_unset.c
        ft_exit.c
        ft_split_quote.c
        parse/parse.h
        parse/ft_skip_space.c
        parse/ft_get_len_str_cmd.c
        parse/ft_check_cmd.c
        parse/ft_is_red.c
        parse/ft_strdup_env_val.c
        parse/ft_is_valid_cmd.c
        parse/ft_valid_str.c
        parse/ft_parse.c
        parse/ft_get_red_val_init.c
        parse/ft_skip_back_n.c
        libft/ft_error.c
        ft_file.c
        ft_env_utils.c
        ft_redirect_utils.c
        ft_fork_pipe.c
        ft_fork_pipe_utils.c
        ft_env_value.c
        ft_export_utils.c
        libft/ft_free_arrstr.c
        ft_free_xxx.c
        parse/ft_valid_arr_str.c ft_check_exec.c ft_red_new.c)
